Added latest projects

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Mahmoud Saleh | AI Engineer & Cloud-AI Developer</title>
+    <title>Mahmoud Saleh | Full-Stack AI Software Engineer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Portfolio of Mahmoud Saleh, AI Engineer and Cloud-AI Developer specializing in Azure, Machine Learning, MLOps, and modern Python APIs." />
+    <meta name="description" content="Portfolio of Mahmoud Saleh, Full-Stack AI Software Engineer building FastAPI backends, LLM/RAG systems, multimodal AI services, and cloud-native deployments." />
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -25,28 +25,27 @@
 
         <section class="hero" id="top">
             <div class="hero-text">
-                <h1>AI Engineer &amp; Cloud-AI Developer</h1>
+                <h1>Full-Stack AI Software Engineer</h1>
                 <p class="hero-subtitle">
-                    I design and build end-to-end AI systems: training models in PyTorch,
-                    deploying them on Azure, and serving them through clean, production-style APIs.
+                    I design and build <strong>production-style AI systems and internal tools</strong>: FastAPI backends, LLM/RAG pipelines, multimodal AI services, and cloud-native deployment.
                 </p>
                 <div class="hero-buttons">
                     <a href="#projects" class="btn primary">View Projects</a>
                     <a href="#contact" class="btn secondary">Contact Me</a>
                 </div>
                 <div class="hero-meta">
-                    <span>Cairo, Egypt · Open to Remote</span>
-                    <span>Python · Azure · ML · FastAPI · Docker</span>
+                    <span>Cairo, Egypt · Open to Hybrid / Remote</span>
+                    <span>Python · FastAPI · LLMs/RAG · PostgreSQL · Docker · Azure</span>
                 </div>
             </div>
             <div class="hero-side">
                 <div class="hero-card">
                     <h2>What I do</h2>
                     <ul>
-                        <li>✅ Train and fine-tune deep learning models in PyTorch</li>
-                        <li>✅ Serve ML models via FastAPI microservices</li>
-                        <li>✅ Deploy pipelines on Azure ML &amp; Azure Functions</li>
-                        <li>✅ Build RAG systems with vector databases &amp; LLMs</li>
+                        <li>✅ Build full-stack AI tools (backend-first, API-driven UI)</li>
+                        <li>✅ Build FastAPI services and async pipelines for AI workloads</li>
+                        <li>✅ Deploy cloud-native services (Docker, CI/CD, Azure)</li>
+                        <li>✅ Build LLM/RAG and multimodal (vision–language) systems</li>
                     </ul>
                     <div class="hero-links">
                         <a href="https://github.com/msaleh1888" target="_blank" rel="noopener">GitHub</a>
@@ -62,10 +61,47 @@
         <section id="skills" class="section">
             <div class="section-header">
                 <h2>Core Skills</h2>
-                <p>Applied machine learning, cloud deployment, and production-ready Python services.</p>
+                <p>Full-stack AI engineering: backends, data pipelines, LLM/RAG, multimodal AI, and cloud-native delivery.</p>
             </div>
 
             <div class="skills-grid">
+                <div class="card">
+                    <h3>Full-Stack &amp; Backend</h3>
+                    <ul>
+                        <li>Python, FastAPI, REST API design</li>
+                        <li>Async workflows, background jobs</li>
+                        <li>PostgreSQL, SQLAlchemy, Alembic</li>
+                        <li>API-driven UI integration (React / Next.js)</li>
+                    </ul>
+                </div>
+                <div class="card">
+                    <h3>LLMs &amp; RAG</h3>
+                    <ul>
+                        <li>Retrieval-Augmented Generation (RAG)</li>
+                        <li>Embeddings, chunking, vector search</li>
+                        <li>Prompt engineering &amp; grounded outputs</li>
+                        <li>Explainability and failure-aware design</li>
+                    </ul>
+                </div>
+                <div class="card">
+                    <h3>Multimodal &amp; Computer Vision</h3>
+                    <ul>
+                        <li>Vision–Language Models (VLMs)</li>
+                        <li>Image + prompt → multimodal reasoning</li>
+                        <li>Document understanding (OCR/layout extraction)</li>
+                        <li>PyTorch, torchvision, transfer learning</li>
+                    </ul>
+                </div>
+                <div class="card">
+                    <h3>Cloud &amp; DevOps</h3>
+                    <ul>
+                        <li>Docker, Docker Compose</li>
+                        <li>CI/CD with GitHub Actions</li>
+                        <li>Azure ML, Azure Functions, Azure Storage</li>
+                        <li>Observability basics: logging, health checks</li>
+                    </ul>
+                </div>
+
                 <div class="card">
                     <h3>AI &amp; Machine Learning</h3>
                     <ul>
@@ -102,7 +138,6 @@
                         <li>Clean code, documentation, reproducible repos</li>
                     </ul>
                 </div>
-            </div>
         </section>
 
         <!-- Projects -->
@@ -110,12 +145,55 @@
             <div class="section-header">
                 <h2>Featured Projects</h2>
                 <p>
-                    Selected projects that show how I combine ML modeling, Azure deployment,
-                    and production-grade FastAPI services.
+                    Selected projects showing production-style AI system design: full-stack platforms, LLM/RAG, multimodal AI, and cloud-native APIs.
                 </p>
             </div>
 
             <div class="projects-grid">
+
+                <!-- Project 0: Job Market Intelligence Platform (JMIP) -->
+                <article class="card project-card">
+                    <h3>Job Market Intelligence Platform</h3>
+                    <p class="project-tag">Full-Stack · FastAPI · PostgreSQL · LLM/RAG · Next.js</p>
+                    <p>
+                        Backend-first platform that ingests and normalizes job postings, then produces
+                        explainable recommendations and weekly market insights. Designed with reliability,
+                        idempotency, and observability in mind.
+                    </p>
+                    <ul class="project-points">
+                        <li>Async ingestion and enrichment pipelines with persisted historical snapshots</li>
+                        <li>Explainable ranking and recommendation logic built on structured data</li>
+                        <li>Thin web UI consuming backend APIs to demonstrate full-stack integration</li>
+                    </ul>
+                    <div class="project-footer">
+                        <span class="project-label">AI Platform</span>
+                        <div class="project-links">
+                            <a href="https://github.com/msaleh1888/job-market-intelligence-platform" target="_blank" rel="noopener">View on GitHub</a>
+                        </div>
+                    </div>
+                </article>
+
+                <!-- Project 0b: Multimodal Visual Inspection & Explanation API -->
+                <article class="card project-card">
+                    <h3>Multimodal Visual Inspection &amp; Explanation API</h3>
+                    <p class="project-tag">FastAPI · VLMs · Multimodal AI · Document AI</p>
+                    <p>
+                        Production-style multimodal service that analyzes images and documents and returns
+                        structured results with grounded explanations, confidence signals, and recommended next steps.
+                    </p>
+                    <ul class="project-points">
+                        <li>VLM-first pipeline: image + prompt → multimodal reasoning → explanation</li>
+                        <li>Modular adapters for swappable model backends and optional baselines</li>
+                        <li>Robust input handling and failure-aware outputs</li>
+                    </ul>
+                    <div class="project-footer">
+                        <span class="project-label">Multimodal AI</span>
+                        <div class="project-links">
+                            <a href="https://github.com/msaleh1888/multimodal-visual-inspection-api" target="_blank" rel="noopener">View on GitHub</a>
+                        </div>
+                    </div>
+                </article>
+
                 <!-- Project 1: Azure Customer Segmentation -->
                 <article class="card project-card">
                     <h3>Azure Customer Segmentation Pipeline</h3>
@@ -163,7 +241,7 @@
                 <!-- Project 3: RAG Microservice -->
                 <article class="card project-card">
                     <h3>RAG Microservice with FastAPI &amp; ChromaDB</h3>
-                    <p class="project-tag">FastAPI · SentenceTransformers · ChromaDB · Grok</p>
+                    <p class="project-tag">FastAPI · SentenceTransformers · ChromaDB · Groq</p>
                     <p>
                         Implemented a Retrieval-Augmented Generation microservice that ingests
                         TXT/PDF documents, indexes them into ChromaDB, and answers questions
@@ -261,11 +339,11 @@
 
         <!-- AI Engineer / Cloud-AI Developer -->
         <div class="timeline-item">
-            <h3>AI Engineer / Cloud-AI Developer</h3>
-            <p class="timeline-meta">2024 – 2025</p>
+            <h3>Applied AI Engineer (Career Transition Projects)</h3>
+            <p class="timeline-meta">Mar 2025 – Present</p>
             <ul>
-                <li>Designed and deployed end-to-end AI systems: ML models, FastAPI microservices, Azure Functions, and batch pipelines.</li>
-                <li>Developed LLM/RAG microservices using FastAPI, ChromaDB, SentenceTransformers, and Groq.</li>
+                <li>Built production-style AI systems end-to-end: FastAPI services, data pipelines, and cloud-native deployment.</li>
+                <li>Developed LLM/RAG services and explainable recommendation workflows with reliability-first design.</li>
                 <li>Built Azure ML customer segmentation pipeline with feature engineering, model registry, and batch endpoints.</li>
                 <li>Created serverless invoice extraction API using Azure Document Intelligence with CI/CD, testing, and monitoring.</li>
                 <li>Developed PyTorch deep learning models and Dockerized inference services for production deployment.</li>
@@ -287,7 +365,7 @@
 
         <!-- Valeo -->
         <div class="timeline-item">
-            <h3>Senior Principal / Senior MBD Engineer – Electrified Mobility & Wiper Systems</h3>
+            <h3>Senior Principal / Senior Software Engineer – Electrified Mobility & Wiper Systems</h3>
             <p class="timeline-meta">Valeo · Cairo · 2014 – May 2024</p>
             <ul>
                 <li>Technical leader for Electrified Mobility software (i-StARS, 48V GMG): model-based design, code generation, testing.</li>
@@ -343,8 +421,8 @@
                         AI-powered APIs, I'd be happy to connect.
                     </p>
                     <ul class="contact-list">
-                        <li><strong>Email:</strong> <a href="mailto:mahmoud.saleh@email.com">mahmoud.saleh@email.com</a></li>
-                        <li><strong>Location:</strong> Cairo, Egypt · Open to remote</li>
+                        <li><strong>Email:</strong> <a href="mailto:mahmoud.saleh1888@gmail.com">mahmoud.saleh1888@gmail.com</a></li>
+                        <li><strong>Location:</strong> Cairo, Egypt · Open to hybrid / remote</li>
                     </ul>
                 </div>
                 <div class="card">
@@ -361,7 +439,7 @@
     </main>
 
     <footer class="site-footer">
-        <p>© <span id="year"></span> Mahmoud Saleh · AI Engineer &amp; Cloud-AI Developer</p>
+        <p>© <span id="year"></span> Mahmoud Saleh · Full-Stack AI Software Engineer</p>
     </footer>
 
     <script>
